--- a/nginx.conf
+++ b/nginx.conf
@@ -6,17 +6,19 @@ server {
     index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        # Si el recurso solicitado existe, se sirve; de lo contrario, se entrega index.html
+        try_files $uri /index.html;
         add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
-    # Configuración para archivos estáticos
+    # Manejo de archivos estáticos con expiración prolongada
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|ttf|woff|woff2)$ {
+        try_files $uri =404;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Evitar acceso a archivos ocultos
+    # Denegar el acceso a archivos ocultos para mayor seguridad
     location ~ /\. {
         deny all;
     }
