--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,37 @@
 server {
-    listen 80 default_server;
+    listen 80;
     server_name _;
 
-    root /usr/share/nginx/html;
-    index index.html;
+    # Configuración para rutas de la API
+    location /api/ {
+        proxy_pass http://localhost:8000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
+    # Configuración para archivos estáticos
     location / {
-        # Si el recurso solicitado existe, se sirve; de lo contrario, se entrega index.html
-        try_files $uri /index.html;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Manejo de archivos estáticos con expiración prolongada
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|ttf|woff|woff2)$ {
-        try_files $uri =404;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    # Configuración específica para Swagger/OpenAPI Docs
+    location /docs {
+        proxy_pass http://localhost:8000/docs;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
-    # Denegar el acceso a archivos ocultos para mayor seguridad
-    location ~ /\. {
-        deny all;
+    # Configuración para archivos de audio
+    location /audio/ {
+        alias /app/output/;
+        expires 1d;
+        add_header Cache-Control "public";
+    }
+
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
