Fix static file root path in nginx configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     # Configuración para archivos estáticos
     location / {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/browser;
         try_files $uri $uri/ /index.html;
     }
 
@@ -32,6 +32,6 @@ server {
 
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
-        root /usr/share/nginx/html/browser
+        root /usr/share/nginx/html;
     }
 }
