Update nginx configuration to specify server name and enhance SSL settings

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,27 @@
 server {
     listen 80;
-    server_name _;
+    server_name pronunciapp.me;
+
+    # Redirección de HTTP a HTTPS
+    return 301 https://$host$request_uri;
+}
+server {
+    listen 443 ssl;
+    server_name pronunciapp.me;
+    
+    # Configuración SSL
+    ssl_certificate /etc/nginx/ssl/pronunciapp.me.crt;     # Ruta al certificado
+    ssl_certificate_key /etc/nginx/ssl/pronunciapp.me.key; # Ruta a la clave privada
+    #ssl_trusted_certificate /etc/nginx/ssl/tudominio.com.ca-bundle; # Si tienes un bundle
+    
+    # Recomendaciones de seguridad SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:10m;
+    ssl_stapling on;
+    ssl_stapling_verify on;
 
     # Configuración para rutas de la API
     location /api/ {
