Refactor nginx configuration to remove temporary HTTPS redirection and consolidate server blocks

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,28 +1,9 @@
 server {
     listen 80;
-    server_name pronunciapp.me;
-
-    # Redirección de HTTP a HTTPS
-    return 301 https://$host$request_uri;
-}
-server {
-    listen 443 ssl;
-    server_name pronunciapp.me;
+    server_name pronunciapp.me www.pronunciapp.me;
     
-    # Configuración SSL
-    ssl_certificate /etc/nginx/ssl/pronunciapp.me.crt;     # Ruta al certificado
-    ssl_certificate_key /etc/nginx/ssl/pronunciapp.me.key; # Ruta a la clave privada
-    #ssl_trusted_certificate /etc/nginx/ssl/tudominio.com.ca-bundle; # Si tienes un bundle
+    # Temporalmente sin redirección a HTTPS hasta tener el certificado
     
-    # Recomendaciones de seguridad SSL
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:10m;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-
     # Configuración para rutas de la API
     location /api/ {
         proxy_pass http://localhost:8000/;
@@ -30,27 +11,25 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-
-    # Configuración para archivos estáticos
+    
+    # Resto de tu configuración...
     location / {
         root /usr/share/nginx/html/browser;
         try_files $uri $uri/ /index.html;
     }
-
-    # Configuración específica para Swagger/OpenAPI Docs
+    
     location /docs {
         proxy_pass http://localhost:8000/docs;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
-
-    # Configuración para archivos de audio
+    
     location /audio/ {
         alias /app/output/;
         expires 1d;
         add_header Cache-Control "public";
     }
-
+    
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html/browser;
