Update nginx configuration to enforce HTTP to HTTPS redirection and enhance SSL settings

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,27 @@
 server {
     listen 80;
-    server_name pronunciapp.me www.pronunciapp.me;
+    server_name pronunciapp.me;
     
-    # Temporalmente sin redirección a HTTPS hasta tener el certificado
+    # Redireccionar todo el tráfico HTTP a HTTPS
+    return 301 https://$host$request_uri;
+}
+server {
+    listen 443 ssl;
+    server_name pronunciapp.me;
+
+    # Configuración de SSL
+    ssl_certificate /etc/nginx/ssl/pronunciapp_me.crt;
+    ssl_certificate_key /etc/nginx/ssl/pronunciapp.me.key;
+    ssl_trusted_certificate /etc/nginx/ssl/pronunciapp_me.ca-bundle;
+
+    # Recomendaciones de seguridad SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:10m;
+    ssl_stapling on;
+    ssl_stapling_verify on;
     
     # Configuración para rutas de la API
     location /api/ {
