Remove unused SSL certificate from Dockerfile and update nginx configuration comments for clarity

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,9 +9,11 @@ server {
     listen 443 ssl;
     server_name pronunciapp.me;
 
-    # Configuración de SSL
+    # Certificados SSL - nombres exactos como los archivos
     ssl_certificate /etc/nginx/ssl/pronunciapp_me.crt;
     ssl_certificate_key /etc/nginx/ssl/pronunciapp.me.key;
+    
+    # Certificados intermedios si son necesarios
     ssl_trusted_certificate /etc/nginx/ssl/pronunciapp_me.ca-bundle;
 
     # Recomendaciones de seguridad SSL
