Update API proxy configurations and adjust API URL in environment settings

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,12 +25,31 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
     
-    # Configuración para rutas de la API
+    # Proxy para TODA la API, incluyendo la documentación
     location /api/ {
-        proxy_pass http://localhost:8000/;
+        proxy_pass http://localhost:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # Proxy específico para la documentación de Swagger
+    location /docs {
+        proxy_pass http://localhost:8000/docs;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # Proxy para openapi.json (necesario para Swagger)
+    location /openapi.json {
+        proxy_pass http://localhost:8000/openapi.json;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
     
     # Resto de tu configuración...
