--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ server {
     
     # Proxy para TODA la API, incluyendo la documentación
     location /api/ {
-        proxy_pass http://localhost:8000/api/;
+        proxy_pass http://vall-e:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,7 +36,7 @@ server {
     
     # Proxy específico para la documentación de Swagger
     location /docs {
-        proxy_pass http://localhost:8000/docs;
+        proxy_pass http://vall-e:8000/docs;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -45,7 +45,7 @@ server {
     
     # Proxy para openapi.json (necesario para Swagger)
     location /openapi.json {
-        proxy_pass http://localhost:8000/openapi.json;
+        proxy_pass http://vall-e:8000/openapi.json;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
