Increase client_max_body_size to 100M for API requests

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,8 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_stapling on;
     ssl_stapling_verify on;
+
+    client_max_body_size 100M;
     
     # Proxy para TODA la API, incluyendo la documentación
     location /api/ {
