Update audio location configuration to use proxy_pass and set timeouts

--- a/nginx.conf
+++ b/nginx.conf
@@ -60,10 +60,24 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    location /audio/ {
-        alias /app/output/;
+    # Replace this section:
+    location /output {
+        alias /output/;
         expires 1d;
         add_header Cache-Control "public";
+    }
+
+        # With this:
+    location /audio/ {
+        proxy_pass http://vall-e:8000/audio/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # For larger audio files
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
     }
     
     error_page 500 502 503 504 /50x.html;
