Update SSL certificate paths and improve audio file proxy settings

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,16 +5,17 @@ server {
     # Redireccionar todo el tráfico HTTP a HTTPS
     return 301 https://$host$request_uri;
 }
+
 server {
     listen 443 ssl;
     server_name pronunciapp.me;
 
     # Certificados SSL - nombres exactos como los archivos
-    ssl_certificate /etc/nginx/ssl/pronunciapp_me.crt;
-    ssl_certificate_key /etc/nginx/ssl/pronunciapp.me.key;
+    ssl_certificate /nginx/ssl/pronunciapp_me.crt;
+    ssl_certificate_key /nginx/ssl/pronunciapp.me.key;
     
     # Certificados intermedios si son necesarios
-    ssl_trusted_certificate /etc/nginx/ssl/pronunciapp_me.ca-bundle;
+    ssl_trusted_certificate /nginx/ssl/pronunciapp_me.ca-bundle;
 
     # Recomendaciones de seguridad SSL
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -27,7 +28,7 @@ server {
 
     client_max_body_size 100M;
     
-    # Proxy para TODA la API, incluyendo la documentación
+    # Proxy para TODA la API
     location /api/ {
         proxy_pass http://vall-e:8000/api/;
         proxy_set_header Host $host;
@@ -54,12 +55,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     
-    # Resto de tu configuración...
-    location / {
-        root /usr/share/nginx/html/browser;
-        try_files $uri $uri/ /index.html;
-    }
-    
     # Replace this section:
     location /output {
         alias /output/;
@@ -67,7 +62,7 @@ server {
         add_header Cache-Control "public";
     }
 
-        # With this:
+    # Proxy para los archivos de audio
     location /audio/ {
         proxy_pass http://vall-e:8000/audio/;
         proxy_set_header Host $host;
@@ -75,13 +70,19 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # For larger audio files
+        # Para archivos de audio grandes
         proxy_read_timeout 300s;
         proxy_connect_timeout 75s;
     }
     
+    # Archivos estáticos frontend
+    location / {
+        root /share/nginx/html/browser;
+        try_files $uri $uri/ /index.html;
+    }
+    
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
-        root /usr/share/nginx/html/browser;
+        root /share/nginx/html/browser;
     }
 }
