Update SSL certificate paths to use correct directory structure

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,11 +11,11 @@ server {
     server_name pronunciapp.me;
 
     # Certificados SSL - nombres exactos como los archivos
-    ssl_certificate /nginx/ssl/pronunciapp_me.crt;
-    ssl_certificate_key /nginx/ssl/pronunciapp.me.key;
+    ssl_certificate etc/nginx/ssl/pronunciapp_me.crt;
+    ssl_certificate_key etc/nginx/ssl/pronunciapp.me.key;
 
     # Certificados intermedios si son necesarios
-    ssl_trusted_certificate /nginx/ssl/pronunciapp_me.ca-bundle;
+    ssl_trusted_certificate etc/nginx/ssl/pronunciapp_me.ca-bundle;
 
     # Recomendaciones de seguridad SSL
     ssl_protocols TLSv1.2 TLSv1.3;
