Refactor audio file proxy settings to use alias and add CORS headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -56,24 +56,34 @@ server {
     }
     
     # Replace this section:
-    location /output {
-        alias /output/;
-        expires 1d;
-        add_header Cache-Control "public";
-    }
+    # location /output {
+    #     alias /output/;
+    #     expires 1d;
+    #     add_header Cache-Control "public";
+    # }
 
     # Proxy para los archivos de audio
+
     location /audio/ {
-        proxy_pass http://vall-e:8000/audio/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        alias /usr/share/nginx/html/audio/;  # ¡Usa "alias" en lugar de "root"!
+        expires 1d;
+        add_header Cache-Control "public";
         
-        # Para archivos de audio grandes
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
+        # Opcional: Habilitar CORS si es necesario
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET' always;
     }
+    # location /audio/ {
+    #     proxy_pass http://vall-e:8000/audio/;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+        
+    #     # Para archivos de audio grandes
+    #     proxy_read_timeout 300s;
+    #     proxy_connect_timeout 75s;
+    # }
     
     # Archivos estáticos frontend
     location / {
