Increase timeout values and buffer size for audio file proxy settings

--- a/nginx.conf
+++ b/nginx.conf
@@ -35,6 +35,15 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Aumentar estos valores
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 100s;
+        proxy_send_timeout 300s;
+        
+        # Para archivos grandes
+        client_max_body_size 100M;  # Ya lo tienes configurado a nivel global
+        client_body_buffer_size 10M;  # Aumentar el tamaño del buffer
     }
     
     # Proxy específico para la documentación de Swagger
