Update server_name in nginx configuration to include www subdomain for both HTTP and HTTPS

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name pronunciapp.me;
+    server_name pronunciapp.me www.pronunciapp.me;
     
     # Redireccionar todo el tráfico HTTP a HTTPS
     return 301 https://$host$request_uri;
@@ -8,7 +8,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name pronunciapp.me;
+    server_name pronunciapp.me www.pronunciapp.me;
 
     # Certificados SSL - nombres exactos como los archivos
     ssl_certificate /etc/nginx/ssl/pronunciapp_me.crt;
